[package]
name = "spooky_streaming_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
cbor4ii = { version = "1.2.2", features = ["use_alloc", "serde1", "use_std"] }
serde = { version = "1.0.228", features = ["derive"] }
#surrealdb = { version = "3.0.0", default-features = false, eatures = ["parser"] }
surrealdb-core = { version = "3.0.0", default-features = false }
thiserror = "2"
ordered-float = "4"
